fix: 자동 배정 system.out 추적